src/App.css
@charset "UTF-8";
.App {
  height: 100vh;
  text-align: center;
  background-color: #474747;
  color: #fff;
  overflow: hidden;
}

.App-content {
  height: 90vh;
  background: -moz-linear-gradient(-150deg, #001729, #050505 60%);
  background: -webkit-linear-gradient(-150deg, #001729, #050505 60%);
  background: linear-gradient(-150deg, #001729, #050505 60%);
  color: white;
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  animation: fall-0 2s;
}

.App-content::after {
  content: "";
  display: block;
  position: absolute;
  left: 0;
  bottom: 0;
  border-top: 60px solid transparent;
  border-left: 50vw solid transparent;
  border-right: 50vw solid #474747;
  border-bottom: 60px solid #474747;
}

@keyframes fall-0 {
  0% {
    top: -100vh;
    left: 0;
  }
  50% {
    top: 0;
    left: 0;
  }
}

@media only screen and (max-width: 2000px) {
  .App-content::after {
    border-left: 1000px solid transparent;
    /* 実数で幅を指定 */
    border-right: 1000px solid #474747;
    /* 実数で幅を指定 */
  }
}

